# apt-transport-swift

./: .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  Makefile  README  README.md  build_debug.sh  build_macos.sh  shortcut.sh  sonar-project.properties
cmake/: FindCheck.cmake  FindJSON-C.cmake
debian/: changelog  control  copyright
src/: CircleBuf.cc  CircleBuf.h  Configuration.c  Configuration.h  Hashes.c  Hashes.h  HttpServerState.cpp  HttpServerState.h  SwiftClient.c  SwiftClient.h  SwiftMethod.cc  SwiftMethod.h  URIAcquire.c  URIAcquire.h  apt-transport-swift2.c  aptmethod.h  basehttp.cc  common.c  common.h  connect.cc  main.c  swift_main.cc
test/: manual_SwiftClient.c  test_Configuration.c  test_Hashes.c  test_SwiftClient.c  test_URIAcquire.c  test_common.c
test/resources/: configuration.txt  uri_acquire.txt
